Updating agents and fixing failing tests